<resources>
    <string name="app_name">TripsApplicationsKotlins</string>
    <string name="label_validation_risk">Error type</string>
    <string name="empty_list_test">Empty list test</string>
    <string name="error_fill">Error fill</string>
    <string name="require_risk_assessment">Require Risk Assessment</string>
    <string name="label_description">Description</string>
    <string name="button_add_to_database">Add to Database</string>
    <string name="label_name">Name</string>
    <string name="name_of_the_trip">Name of the trip</string>
    <string name="label_destination">Destination</string>
    <string name="label_date_of_trip">Date of trip</string>
    <string name="mm_dd_yy">MM/dd/yy</string>
    <string name="check_box_yes">yes</string>
    <string name="check_box_no">No</string>
    <string name="item_name">item name</string>
    <string name="item_destination">item destination</string>
    <string name="mm_dd_yyyyy">MM/dd/yyyyy</string>
    <string name="search_some_thing">Search some thing …</string>
    <string name="button_edit">Edit</string>
    <string name="label_required_fill_info">This field is required</string>
    <string name="label_format_month_day_year">MM/dd/yy</string>
    <string name="button_save_edit">Save edit</string>
    <string name="banner_ad_unit_id">ca-app-pub-8126408194571445/5839822608</string>
    <string name="title_bottom_bar_home">Home</string>
    <string name="title_bottom_bar_all">All</string>
    <string name="title_bottom_bar_search">Search</string>
    <string name="title_bottom_bar_update">Update</string>
    <string name="btn_join">Join</string>
    <string name="btn_leave">Leave</string>

</resources>