<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C2C2F3"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_of_the_trip"
        android:maxLength="100"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="text"
        android:autofillHints="" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_destination" />

    <EditText
        android:id="@+id/edtDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_destination"
        android:maxLength="100"
        android:maxLines="1"
        android:singleLine="true"
        android:autofillHints=""
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_date_of_trip" />

    <EditText
        android:id="@+id/edtDataOfTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:focusable="false"
        android:hint="@string/mm_dd_yy"
        android:inputType="none" />

    <TextView
        android:id="@+id/tvErrorDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_fill"
        android:textColor="@color/color_red_700"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/require_risk_assessment" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/check_box_yes" />

        <CheckBox
            android:id="@+id/cbNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/check_box_no" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvErrorCheckRisk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_fill"
        android:textColor="@color/color_red_700"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_description" />


    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:maxLength="255"
        android:autofillHints="Empty"
        android:inputType="text" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:backgroundTint="@color/black"
        android:text="@string/button_edit" />

</LinearLayout>