<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_rows"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/name_of_the_trip"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:singleLine="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_destination"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/label_destination"
            android:inputType="text"
            android:maxLength="100"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_of_trip"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtDataOfTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/mm_dd_yy"
            android:inputType="none" />

        <TextView
            android:id="@+id/tvErrorDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_fill"
            android:textColor="@color/color_red_700"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/require_risk_assessment"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_box_yes" />

            <CheckBox
                android:id="@+id/cbNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/check_box_no" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvErrorCheckRisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_fill"
            android:textColor="@color/color_red_700"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:cursorVisible="true"
            android:inputType="text"
            android:maxLength="255" />

        <Button
            android:id="@+id/btnDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:text="@string/button_save_edit" />


    </LinearLayout>

</FrameLayout>